crates/logweir-engine-oso/tests/snapshots/render_backup__backup_s3.snap
---
source: crates/logweir-engine-oso/tests/render_backup.rs
description: "THE CONTAINER-SIDE SHAPE: field-for-field e2e/compose/config/backup-drill.yaml:14-39, the config that manufactured the drill archive. The HOST-SIDE shape of the same archive is what examples/backup.yaml ships (Task 4) — logweir and the engine run on the host in the drill path, which is why examples/drill.yaml:17 and :71 use a host-side MinIO endpoint. See backup-drill.yaml:6-13."
expression: "render_backup::render(&plan()).expect(\"the fixture renders\")"
---
# Rendered by logweir. Do not edit; regenerate with `logweir backup run`.
mode: backup
backup_id: "drill-demo"

source:
  bootstrap_servers:
    - "kafka-broker-1:9094"
  topics:
    include:
      - "orders"
      - "payments"

storage:
  backend: s3
  bucket: "kafka-backups"
  prefix: "drill-demo"
  region: "us-east-1"
  endpoint: "http://minio:9000"
  path_style: true
  allow_http: true

backup:
  compression: "zstd"
  continuous: false
  segment_max_records: 1000
  segment_max_bytes: 10485760
  max_concurrent_partitions: 3
  include_offset_headers: true

metrics:
  enabled: false
